<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tiny Trades</string>
    <string name="logo">Tiny Trades</string>
    <string name="appname">𝑻𝒊𝒏𝒚 𝑻𝒓𝒂𝒅𝒆𝒔</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="sell">Sell</string>
    <string name="your_orders">Your orders</string>
    <string name="profile">Profile</string>
    <string name="login">Log in</string>
    <string name="backbtn">Back button</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>
    <string name="loginbtn">LOGIN</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">Enter new password</string>
    <string name="confirm_new_pin">Confirm new pin</string>
    <string name="changebtn">CHANGE</string>
    <string name="image">Image</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="item_image">Item Image</string>
    <string name="item_title">Item Title</string>
    <string name="item_price">Item Price</string>
    <string name="image_view">Detail View</string>
    <string name="userprofile">Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="email_id">Email id</string>
    <string name="address">Personal Address</string>
    <string name="d_no">D. No.</string>
    <string name="street">Street</string>
    <string name="village">Village</string>
    <string name="pin_code">Pin code</string>
    <string name="mandal">Mandal</string>
    <string name="district">District</string>
    <string name="add_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="size">size</string>
    <string name="item_size">Size</string>
    <string name="gender">Gender</string>
    <string name="seller_image">Seller Image</string>
    <string name="seller_name">Seller Name</string>
    <string name="create_account">Create Account</string>
    <string name="create_username">Create username</string>
    <string name="create_password">Create password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create">CREATE</string>
    <string name="save">SAVE</string>
    <string name="new_account">NEW ACCOUNT</string>
    <string name="sellbtn">SELL</string>
    <string name="login_profile">LOGIN</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="user">username</string>
    <string name="delete">DELETE</string>
    <string name="update">UPDATE</string>
    <string name="gallery">GALLERY</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="quantity">Quantity</string>
    <string name="items">ITEMS</string>
    <string name="seller_username">Seller Username</string>
    <string name="upload_from_pc">UPLOAD FROM PC</string>
    <string name="decrement">Decrement</string>
    <string name="increment">Increment</string>
    <string name="buyer_item_quantity">1</string>
    <string name="buyer_image">Buyer image</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="product_details">Product Details</string>
    <string name="buyer_username">Buyer Username</string>
    <string name="item">Item</string>
    <string name="confirm_buy">CONFIRM BUY</string>
    <string name="order_image">Order Image</string>
    <string name="cancel">CANCEL</string>
    <string name="remaining_order">with in 3 days you will get your order</string>
</resources>
