<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ItemDetailsActivity">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:contentDescription="@string/image_view"
        android:scaleType="fitXY"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/backbtn"
        android:background="@color/dim_background"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/backbtn"
        app:layout_constraintStart_toStartOf="@id/itemImage"
        app:layout_constraintTop_toTopOf="@id/itemImage"/>

    <TextView
        android:id="@+id/itemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/itemImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/itemSize"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="10dp"
        android:text="@string/item_size"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemTitle"/>

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:drawableLeftCompat="@drawable/baseline_currency_rupee_24"
        android:drawablePadding="5dp"
        app:layout_constraintTop_toBottomOf="@id/itemTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:text="@string/seller_username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/itemSize"/>

    <Button
        android:id="@+id/addtocart"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/add_cart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/buynow"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/buy_now"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/orange"
        android:textColor="@color/black"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
