<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".BuyNow">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/profileimage"
        android:src="@drawable/men"
        android:contentDescription="@string/image"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/backbtn"
        android:contentDescription="@string/backbtn"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/profileimage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:autofillHints="no"
        android:hint="@string/user"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:padding="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:background="@color/dim_background"
        app:layout_constraintStart_toStartOf="@id/profileimage"
        app:layout_constraintEnd_toEndOf="@id/profileimage"
        app:layout_constraintTop_toBottomOf="@id/profileimage"/>

    <TextView
        android:id="@+id/buyerName"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/buyer_name"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:layout_marginStart="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@color/dim_background"
        app:layout_constraintTop_toTopOf="@id/profileimage"
        app:layout_constraintStart_toEndOf="@id/profileimage"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/gender"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="3dp"
        android:padding="10dp"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/buyerName"
        app:layout_constraintStart_toStartOf="@id/buyerName"
        app:layout_constraintBottom_toTopOf="@id/emailid"
        app:layout_constraintEnd_toStartOf="@id/mobileno"/>

    <TextView
        android:id="@+id/mobileno"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/mobile_number"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:layout_marginTop="10dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="0dp"
        android:padding="10dp"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/buyerName"
        app:layout_constraintStart_toEndOf="@id/gender"
        app:layout_constraintEnd_toEndOf="@id/buyerName"/>

    <TextView
        android:id="@+id/emailid"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="0dp"
        android:autofillHints="no"
        android:hint="@string/email_id"
        android:textSize="16sp"
        android:textStyle="normal"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/gender"
        app:layout_constraintStart_toStartOf="@id/buyerName"
        app:layout_constraintEnd_toEndOf="@id/buyerName"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/emailid"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/dno"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/d_no"
        android:inputType="none"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:padding="10dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="20dp"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="@id/address"
        app:layout_constraintEnd_toStartOf="@id/street"
        app:layout_constraintBottom_toTopOf="@id/village"/>

    <EditText
        android:id="@+id/street"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/street"
        android:inputType="text"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:padding="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="20dp"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/address"
        app:layout_constraintEnd_toEndOf="@id/buyerName"
        app:layout_constraintStart_toEndOf="@id/dno"/>

    <EditText
        android:id="@+id/village"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints="no"
        android:hint="@string/village"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp"
        android:textStyle="normal"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/dno"
        app:layout_constraintStart_toStartOf="@id/dno"/>

    <EditText
        android:id="@+id/pincode"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/pin_code"
        android:inputType="number"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:padding="10dp"
        android:background="@color/dim_background"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/street"
        app:layout_constraintStart_toEndOf="@id/village"
        app:layout_constraintEnd_toEndOf="@id/street"/>

    <EditText
        android:id="@+id/mandal"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints="no"
        android:hint="@string/mandal"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="16sp"
        android:textStyle="normal"
        android:background="@color/dim_background"
        app:layout_constraintTop_toBottomOf="@id/village"
        app:layout_constraintStart_toStartOf="@id/village"
        app:layout_constraintEnd_toStartOf="@id/district"/>

    <EditText
        android:id="@+id/district"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:autofillHints="no"
        android:hint="@string/district"
        android:inputType="text"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:padding="10dp"
        android:background="@color/dim_background"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/pincode"
        app:layout_constraintStart_toEndOf="@id/mandal"
        app:layout_constraintEnd_toEndOf="@id/pincode"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item"
        android:text="@string/item"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/mandal"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/cart_image"
        android:contentDescription="@string/image"
        android:layout_marginTop="10dp"
        android:layout_marginStart="0dp"
        app:layout_constraintTop_toBottomOf="@id/item"
        app:layout_constraintStart_toStartOf="@id/item"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cart_title"
        android:text="@string/title"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/cart_image"
        app:layout_constraintStart_toEndOf="@id/cart_image"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cart_size"
        android:text="@string/size"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toEndOf="@id/cart_image"
        app:layout_constraintTop_toBottomOf="@id/cart_title"/>

    <EditText
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/cart_quantity"
        android:autofillHints="no"
        android:text="@string/buyer_item_quantity"
        android:inputType="number"
        android:background="@color/background"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/cart_size"
        app:layout_constraintStart_toStartOf="@id/cart_size"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cart_price"
        android:text="@string/price"
        android:textSize="16sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/cart_quantity"
        app:layout_constraintStart_toEndOf="@id/cart_image"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:id="@+id/confirm_buy"
        android:text="@string/confirm_buy"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@id/cart_image"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:id="@+id/update"
        android:text="@string/update"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:backgroundTint="@color/orange"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/cart_image"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>